<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serbot_slam</name>
  <version>0.0.0</version>
  <description>SLAM and mapping package for Serbot robot</description>
  <maintainer email="ros2@todo.todo">ros2</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>rviz2</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
